# lead_scoring_ai_employee

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
api/: main.py
artifacts/: metrics.json  model_comparison.md
dashboard/: app.py
data/: lead_scoring_logistics_Dataset.csv
scripts/: capture_screenshots_mac.sh  smoke_test.py  train.py
src/lead_scoring/: __init__.py  config.py  inference.py  train.py
