[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-scoring-ai"
version = "2.0.0"
description = "End-to-end lead conversion scoring with training pipeline, API, and dashboard"
requires-python = ">=3.8"
dependencies = [
  "pandas==2.0.3",
  "scikit-learn==1.3.2",
  "joblib==1.3.2",
  "fastapi==0.110.3",
  "uvicorn==0.30.6",
  "streamlit==1.33.0",
  "pydantic==2.10.6",
  "httpx==0.27.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
